# backend/internal/proposta/propostahandler/handler.go
@@ -69,6 +69,7 @@ func (h *Handler) GetPropostas(w http.ResponseWriter, r *http.Request) {
 // @Tags         trocas
 // @Accept       json
 // @Produce      json
+// @Param        proposta  body     propostarepo.PropostaWriteModel  true  "Dados da proposta"
 // @Success      201  {object}  map[string]string  "Proposta criada com sucesso e ID retornado"
 // @Failure      400  {string}  string  "Body inválido"
 // @Failure      500  {string}  string  "Erro ao salvar proposta"
